--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "node-sass": "^4.6.1",
+    "sass-loader": "^6.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
